[project]
name = "my-mcp-claude"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mcp>=1.0.0"]
[[project.authors]]
name = "dongju93"
email = "spdlqj011@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
my-mcp-claude = "my_mcp_claude:main"
